--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
     <script src="./desafio1.js"></script>
-    <title>Programa de Maestros</title>
+    <title>El Mas NERD de todos!!</title>
 </head>
 <body>
     <script>
