--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
-    <script src="./desafio2.js"></script>
-    <title>El Mas NERD de todos!!</title>
+    <script src="./desafio3.js"></script>
+    <title>Desafio 3 / Programa para Visualizar/Ingresar/Buscar Notas!!</title>
 </head>
+<header>
+    <h1 class="titulo">Desafio 3 / Programa para Visualizar/Ingresar/Buscar Notas!!</h1>
+</header>
 <body>
-    <script>
-    </script>     
+    
 </body>
 </html>
