--- a/index.html
+++ b/index.html
@@ -240,6 +240,6 @@
     <script>
         AOS.init();
     </script>
-    <script src="./primeraEntregarProyecto.js"></script>
+    <!-- <script src="./main.js"></script> -->
 </body>
 </html>
