--- a/index.html
+++ b/index.html
@@ -6,13 +6,16 @@
     <meta name="keywords" content="libreria,agendas, mooving, lapiz, lapices, cuaderno, boligrafo, birome, resma, lapicera, regaleria, regla, distribuidora, mayorista, repuesto, block, tijera, rivadavia, exito, avon, filgo, mooving">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
+        <!-- LINK FONT AWESOME -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <!-- LINK EFECTOS -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <!-- FUENTES -->
     <link href="https://fonts.googleapis.com/css?family=Ruda&display=swap" rel="stylesheet" />
     <!-- LINK BOOSTRAP -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <!-- LINK FONT AWESOME -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+    
+
 
     <title>Franpapel SRL - Mayorista en Librería</title>
 </head>
@@ -241,5 +244,6 @@
         AOS.init();
     </script>
     <!-- <script src="./main.js"></script> -->
+   
 </body>
 </html>
